# web_service_python

./: LICENSE  README.md  pyproject.toml
src/web_service_python/app/: dependencies.py  exception_handlers.py  exceptions.py  lifespan.py  main.py
src/web_service_python/controller/: product_controller.py
src/web_service_python/domain/: product.py
src/web_service_python/dto/: product_dto.py
src/web_service_python/repository/: product_repository.py
src/web_service_python/service/: product_service.py
tests/: conftest.py  test_product_controller.py
